# python-stackdriver-log-formatter

./: .gitignore  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml
mypy-stubs/: freezegun.pyi  pytest.pyi
stackdriver_formatter/: __init__.py  formatter.py  serializer.py
stackdriver_log_formatter/: __init__.py  formatter.py  serializer.py
tests/: test_stackdriver_formatter.py  test_stackdriver_log_formatter.py
