[tool.poetry]
name = "stackdriver-log-formatter"
version = "0.1.0"
description = ""
authors = ["Shinichi TAMURA <shnch.tmr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.720.0"
freezegun = "^0.3.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
