[tool.poetry]
name = "stackdriver-log-formatter"
version = "0.1.2"
description = "Python log formatter for Google Stackdriver Logging"
authors = ["Shinichi TAMURA <hello@tmshn.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tmshn/python-stackdriver-log-formatter"
repository = "https://github.com/tmshn/python-stackdriver-log-formatter"
keywords = [
    "logging",
    "GCP",
    "Google Cloud",
    "Stackdriver",
    "Stackdriver Logging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mypy = "^0.770.0"
freezegun = "^0.3.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
